# kitty-editor

./: Cargo.toml  README.md
kitty defaults reference/: kitty_settings_reference.md
packaging/: kitty.conf.example  kitty_config_editor.py
src/: cli.rs  config_model.rs  default_reference.rs  diff_engine.rs  fuzzy_search.rs  highlighting.rs  include_loader.rs  keybinding_editor.rs  main.rs  metadata_extractor.rs  parser.rs  reload.rs  runtime.rs  startup_prompt.rs  theme_browser.rs  tui_app.rs  ui_renderer.rs  validator.rs  writer.rs
src/kitty/: detect.rs
