[package]
name = "kitty-config-editor"
version = "0.2.0"
edition = "2021"
description = "Interactive Kitty config editor built with ratatui"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
regex = "1"
walkdir = "2"
shellexpand = "3"

[dev-dependencies]
tempfile = "3"
